# ChangeLog for dev-util/shc
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/shc/ChangeLog,v 1.4 2003/05/17 05:59:31 george Exp $

*shc-3.6 (16 May 2003)

  16 May 2003;George Shapovalov <george@gentoo.org> shc-3.6.ebuild :
  new version (#19969)
  Thanks to Thomas Eckert <eckert.thomas@gmx.net> for notification

*shc-3.4 (05 Jan 2003)

  08 Jan 2003; Jack Morgan <jmorgan@gentoo.org> shc-3.4.ebuild :
  Removed sparc64 keyword

  05 Jan 2003; George Shapovalov <george@gentoo.org> ChangeLog, shc-3.4.ebuild, files/digest-shc-3.4 :
  initial release (#12633)
  ebuild submitted by Tom <Eckert.Thomas@gmx.net>.
  shc is a compiler/scrambler for interpreter-languages. As long as the
  interpreter can read it's script from the command-line you can use shc
  to hide your code -- well this is not very open-source like, but
  sometimes this may be wanted. The main-target was shell-code.