@@ -1,7 +1,7 @@
-MD5 86a42ce6ff73e2ee34894fee2c1d41ba ChangeLog 963
+MD5 bf5a2b5abdfefa8cfaff13b631242622 ChangeLog 1086
 MD5 062c71396c80087eb33b98f7ccd3ee12 shc-3.4.ebuild 687
 MD5 44caf0a362ebf8fb789815b827e1177a shc-3.6.ebuild 687
-MD5 6c12221d0b7cedca357a580585327e34 shc-3.7.ebuild 688
+MD5 b60701e6574f8216aa58a12af05cf170 shc-3.7.ebuild 689
 MD5 30b7e134fcfbece29aa02778d2bdaf81 files/digest-shc-3.7 55
 MD5 ad57924495236c763d0fe1dfe51727ff files/digest-shc-3.4 55
 MD5 15d75588af6a4c42980dd668f30a88d4 files/digest-shc-3.6 55
