@@ -1,0 +1,1 @@
+MD5 49e4054ad39371ea84f7be46cf8d9701 shc-3.7.tgz 18942
